src/App.css
#root {
  margin: 0;
  padding: 0;
  text-align: center;

}
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body:{
  margin: 0;
  padding: 0;
  background: #000;
}
html:{
  margin: 0;
  padding: 0;
  background: #000;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}



@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
}
.scroller {
  overflow: hidden;
  width: 100%;
  background:#191919;
  padding: 10px 0;
  transform: rotate(-1.97deg);
}

.scroller-inner {
  display: flex;
  gap: 40px;
  width: max-content;
  animation: scroll 15s linear infinite;
}

.scroller-inner span {
  color: #FFFFFFAD;
  font-weight: 400;
  white-space: nowrap;
  font-family: Bebas Neue;
}
.nav-link {
  padding: 10px 16px;
  border-radius: 999px;
  cursor: pointer;
  transition: all 0.3s ease;
  color: rgba(255,255,255,0.8);
}

/* 🔥 HOVER GLOW */
.nav-link:hover {
  background: rgba(255,255,255,0.08);
  box-shadow: 0 0 20px rgba(255,255,255,0.15);
  transform: translateY(-2px);
  color: #fff;
}

@keyframes scroll {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-50%);
  }
}

